<resources>
    <string name="app_name">Posts Application</string>
    <string name="add_post">add post</string>
    <string name="hint_title">Title</string>
    <string name="write_something">write something…</string>
    <string name="save_post">save post</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_body">Body</string>
    <string name="last_updated_placeholder">last updated: 2020–01–01</string>
    <string name="last_updated">last updated: </string>
    <string name="empty_list_image">empty list image</string>
    <string name="looks_like_there_are_no_posts_to_display_right_now">Looks like there are no posts to display right now…</string>

</resources>